# testing-hands-on

./: .eslintrc.json  .gitignore  .mise.toml  .mocharc.json  .pre-commit-config.yaml  LICENSE  README.md  cypress.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.service.config.ts  pyproject.toml  tsconfig.json
cypress/e2e/: teseus.cy.ts
cypress/support/: commands.ts  index.ts
mocha/tests/: fizzbuzz.spec.ts  holiday.spec.ts
playwright/tests/: vanilla.spec.ts
sut/jssut/: fizzbuzz.ts  holiday.ts
sut/pysut/: __main__.py  app.py  gunicorn.conf.py  resources.py
sut/pysut/model/: __init__.py
sut/pysut/model/authentication/: __init__.py  host.py  user.py
sut/pysut/statics/: authentication.yaml  style.css
sut/pysut/templates/: login.html  status.html
